# payment_system_coding_challenge

./: .env.test  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/calculator/: Cargo.toml
crates/calculator/calculator_consumer/src/: main.rs
crates/calculator/migrations/: sqitch.plan
crates/calculator/migrations/deploy/: create_merchants_table.sql
crates/calculator/migrations/revert/: create_merchants_table.sql
crates/calculator/src/: entities.rs  events.rs  lib.rs
crates/calculator/src/entities/: merchants.rs
crates/importer/: Cargo.toml
crates/importer/cron_runner/data/: merchants.csv
crates/importer/cron_runner/src/: main.rs
crates/importer/migrations/: 20250609152247_create_merchants.sql  sqitch.plan
crates/importer/migrations/deploy/: add_unique_index_to_merchants.sql  merchants.sql
crates/importer/migrations/revert/: add_unique_index_to_merchants.sql  merchants.sql
crates/importer/migrations/verify/: add_unique_index_to_merchants.sql  merchants.sql
crates/importer/src/: events.rs  lib.rs  services.rs
crates/importer/src/entities/: merchants.rs
crates/importer/src/events/: publisher.rs
crates/importer/src/events/kafka/: publisher.rs
crates/importer/src/jobs/: import_csv.rs
crates/importer/src/repositories/: merchants.rs
crates/importer/src/services/: csv_normalizer.rs
crates/importer/src/settings/: config.rs
crates/importer/tests/: import_csv.rs  mock_publisher.rs  utils.rs
crates/importer/tests/fixtures/: merchants.csv
scripts/: init-calculator-dbs.sh  init-importer-dbs.sh  init-test-db.sql
(+8 files in other folders)
