[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
rstest = "0.18"
apalis = "0.5"
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
csv = "1.3"
strum = "0.26"
strum_macros = "0.26"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "chrono", "uuid"] }
tokio-cron-scheduler = "0.9"
dotenvy = "0.15.7"
once_cell = "1.19"
rdkafka = { version = "0.37.0", features = ["tokio"] }
async-trait = "0.1.88"
anyhow = "1.0.98"

[[bin]]
name = "cron_runner"
path = "cron_runner/src/main.rs"
